package configuration;

public class SonarRequestList {

}
