package configuration;

public class SonarQubeServer {

}
